...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/popular_tv_show"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/rv_popular"
            app:layout_constraintStart_toStartOf="@+id/rv_popular"
            app:layout_constraintTop_toBottomOf="@+id/rv_popular" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular"
            android:layout_width="0dp"
...
            app:layout_constraintEnd_toEndOf="@+id/tv_popular_movies"
            app:layout_constraintStart_toStartOf="@+id/tv_popular_movies"
            app:layout_constraintTop_toBottomOf="@+id/tv_popular_movies"
            tools:listitem="@layout/item_movies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
...
